MyFirstProject/src/objects/Client__c.object
<CustomObject>
    <description>This is client object</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is description field</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>This is email field</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>This is mobile no field</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <description>This is point of contact field</description>
        <label>Point of contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>